--- a/FrontMentorDesafios/TimeTrackingChallenger/style/index.css
+++ b/FrontMentorDesafios/TimeTrackingChallenger/style/index.css
@@ -100,7 +100,6 @@ body {
 
 #profile-menu-daily {
     margin-top: 10px;
-    ;
 }
 
 #a-s-work {
@@ -132,6 +131,52 @@ body {
     font-family: 'Rubik', sans-serif;
     color: white;
 }
+
+#a-s-play {
+    grid-area: 1/3;
+    background-color: #56c2e6;
+}
+
+.play-desc {
+    width: 100%;
+    border: 1px solid black;
+}
+
+#a-s-d-play {
+    height: 79%;
+    border-radius: 4%;
+    background-color: #1d204b;
+    font-family: 'Rubik', sans-serif;
+    position: relative;
+    top: -28px;
+}
+
+#a-s-d-play-image {
+    position: relative;
+    left: 150px;
+}
+
+.container-a-s-d-play-text {
+    font-family: 'Rubik', sans-serif;
+    color: white;
+}
+
+#a-s-study {
+    grid-area: 1/4;
+}
+
+#a-s-exercise {
+    grid-area: 2/2;
+}
+
+#a-s-social {
+    grid-area: 2/3;
+}
+
+#a-s-self-care {
+    grid-area: 2/4;
+}
+
 ul {
     display: flex;
     flex-direction: row;
@@ -173,25 +218,5 @@ li a {
     padding-left: 40px;
     margin-top: 10px;
     color:#7b7fb3;
-}
-
-#a-s-play {
-    grid-area: 1/3;
-}
-
-#a-s-study {
-    grid-area: 1/4;
-}
-
-#a-s-exercise {
-    grid-area: 2/2;
-}
-
-#a-s-social {
-    grid-area: 2/3;
-}
-
-#a-s-self-care {
-    grid-area: 2/4;
 }
 
