--- a/FrontMentorDesafios/TimeTrackingChallenger/style/index.css
+++ b/FrontMentorDesafios/TimeTrackingChallenger/style/index.css
@@ -162,11 +162,34 @@ body {
 
 #a-s-study {
     grid-area: 1/4;
+    background-color: #ff5e7d;
 }
 
-#a-s-exercise {
-    grid-area: 2/2;
+.study-desc {
+    width: 100%;
+    border: 1px solid black;
 }
+
+#a-s-d-study {
+    height: 79%;
+    border-radius: 4%;
+    background-color: #1d204b;
+    font-family: 'Rubik', sans-serif;
+    position: relative;
+    top: -28px;
+}
+
+#a-s-d-study-image {
+    position: relative;
+    left: 150px;
+}
+
+.container-a-s-d-study-text {
+    font-family: 'Rubik', sans-serif;
+    color: white;
+}
+
+
 
 #a-s-social {
     grid-area: 2/3;
