feat/TimerTracking/exercise-finalizado

--- a/FrontMentorDesafios/TimeTrackingChallenger/style/index.css
+++ b/FrontMentorDesafios/TimeTrackingChallenger/style/index.css
@@ -189,7 +189,34 @@ body {
     color: white;
 }
 
+#a-s-exercise {
+    grid-area: 2/2;
+    background-color: #4bcf83;
+}
 
+.exercise-desc {
+    width: 100%;
+    border: 1px solid black;
+}
+
+#a-s-d-exercise {
+    height: 79%;
+    border-radius: 4%;
+    background-color: #1d204b;
+    font-family: 'Rubik', sans-serif;
+    position: relative;
+    top: -10px;
+}
+
+#a-s-d-exercise-image {
+    position: relative;
+    left: 150px;
+}
+
+.container-a-s-d-exercise-text {
+    font-family: 'Rubik', sans-serif;
+    color: white;
+}
 
 #a-s-social {
     grid-area: 2/3;
